[package]
name = "l11_tailr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.3.11"
num = "0.4"
regex = "1.9.5"
once_cell = "1.18" #to create a computed static value

[dev-dependencies]
assert_cmd = "1"
predicates = "3.0.3"
rand = "0.8.5"
