[package]
name = "l13_calr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.3.11"
chrono = "0.4" 
itertools = "0.11" #to join lines of text
ansi_term = "0.12"

[dev-dependencies]
assert_cmd = "1"
predicates = "3.0.3"
