[package]
name = "l14_lsr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.3.11"
chrono = "0.4" 
tabular = "0.2"
users = "0.11"

[dev-dependencies]
assert_cmd = "1"
predicates = "3.0.3"
rand = "0.8.5"
