[package]
name = "l9_grepr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.3.11"
walkdir = "2.4.0" 
regex = "1.9.5"
sys-info = "0.9"

[dev-dependencies]
assert_cmd = "1"
predicates = "3.0.3"
rand = "0.8.5"
