[package]
name = "tonic_chatroom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
arc-swap = "1.6.0"
chrono = "0.4.34"
dashmap = "5.5.3"
futures = "0.3.30"
lazy_static = "1.4.0"
prost = "0.12.3"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = "0.1.14"
tonic = "0.11.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
tonic-build = "0.11.0"
