[package]
name = "todo_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
axum-extra = { version = "0.9.2", features = ["typed-header"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_with = "3.6.1"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
sea-orm = { version = "0.12.14", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
bcrypt = "0.15.0"
chrono = "0.4.34"
jsonwebtoken = "9.2.0"
validator = { version = "0.16.1", features = ["derive"] }
